add dynamic settings to dashboard
